--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,10 @@ dependencies:
   flutter_riverpod: ^2.4.10
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
+  http: ^1.1.0
 
   flow_layout:
-    path: /Users/shigous/projects/auto/flow_layout
+    path: /Users/sryu/projects/flow_layout
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
