--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   collection: ^1.18.0
 
   flow_layout:
-    path: /Users/sryu/projects/flow_layout
+    path: ../flow_layout
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
