--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   json_annotation: ^4.8.1
   http: ^1.1.0
   collection: ^1.18.0
+  file_picker: ^5.3.1
 
   flow_layout:
     path: ../flow_layout
