--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   equatable: ^2.0.5
   flutter_riverpod: ^2.4.0
   shared_preferences: ^2.2.2
+  flutter_highlight: ^0.7.0
 
   # The following adds the Cupertino Icons font to your application.
   # The following adds the Cupertino Icons font to your application.
@@ -44,6 +45,10 @@ dependencies:
 
   flow_layout:
     path: ../../flow_layout
+
+  # openapi:
+  #   path: ../stepflow_flutter_client
+
   uuid: ^4.5.1
 
 dev_dependencies:
